# gb-emulator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pipeline.yml
roms/: .gitignore
src/: apu.rs  cartridge.rs  cpu.rs  helpers.rs  input.rs  instructions.rs  main.rs  memory.rs  mmu.rs  ppu.rs  video.rs
src/mbc/: mbc0.rs  mbc1.rs  mbc3.rs  mod.rs
