[package]
name = "gb-emulator"
version = "0.1.0"
edition = "2021"
license = "mit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
bitvec = "1.0"
blip_buf = "0.1.4"
byteorder = "1.4"
clap = { version = "4.0", features = ["derive"] }
console = "0.15.5"
cpal = "0.15.2"
ggez = "0.9.0-rc0"
rand = "0.8.5"
rodio = "0.17.1"
spin_sleep = "1.1.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[patch.crates-io]
ggez = { git = 'https://github.com/ggez/ggez.git', branch = "devel"  }

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
